<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorBG">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imgDesc"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/icon_logo"
        android:text="Master Preventive \nMaintenance"
        android:textColor="@color/colorGray"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:text="@string/about_desc"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/develop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:text="@string/developer"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:alpha="0.5"
        android:layout_below="@id/develop"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>